--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -1,25 +1,29 @@
-@use "../abstracts/colors" as *;
+@use '../abstracts/colors' as *;
 
 .btn {
-    display: inline-block;
-    text-decoration: none;
-    text-align: center;
-    border: none;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  border: none;
 
-    &--radius {
-        border-radius: 1rem;
-    }
+  &--radius {
+    border-radius: 1rem;
+  }
 
-    &--radiusBig {
-        border-radius: 1.5rem;
-    }
+  &--radiusBig {
+    border-radius: 1.5rem;
+  }
 
-    &--carrito-img {
-        // width: 9rem;
-        height: 10rem !important;
-    }
+  &--carrito-img {
+    // width: 9rem;
+    height: 10rem !important;
+  }
 
-    &--box-shadow {
-        box-shadow: 0 0 2rem $c-black;
-    }
+  &--box-shadow {
+    box-shadow: 0 0 2rem $c-black;
+  }
+
+  &--multicolor {
+    background: linear-gradient(to right, $main-blue, $c-green);
+  }
 }
