--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -310,6 +310,10 @@
   background: black;
 }
 
+.bg-black-2 {
+  background: url(../images/socialMedia/fondo\ 3.jpg) no-repeat center center / cover;
+}
+
 .bg-ya {
   background: url('../../images/aplicaionesMoviles/fondo2.jpg') no-repeat center
     center / cover;
