--- a/scss/layout/_topNav.scss
+++ b/scss/layout/_topNav.scss
@@ -2,6 +2,33 @@
 @use '../abstracts/mixins' as *;
 
 .blockNav {
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+
+  --state-open: scale(1);
+  --state-close: scale(0);
+  --links: translate(100%);
+
+  &:target {
+    --active: none;
+    --state-open: scale(0);
+    --state-close: scale(1);
+    --links: translate(0);
+
+    @include for-size(500px) {
+      --links: translate(50%);
+    }
+
+    @include for-size('tablet-landscape-up') {
+      --links: unset;
+    }
+  }
+
+  @include for-size('tablet-landscape-up') {
+    --links: unset;
+  }
+
   &__box {
     display: flex;
     justify-content: space-between;
