--- a/scss/pages/_lanzaya.scss
+++ b/scss/pages/_lanzaya.scss
@@ -1,6 +1,11 @@
 @use '../abstracts/colors' as *;
 @use '../abstracts/mixins' as *;
 
+.accede {
+  padding-top: 15rem;
+  padding-bottom: 5rem;
+}
+
 .tipoAplicaciones {
   &__img {
     height: 10rem;
@@ -32,5 +37,12 @@
         display: unset;
       }
     }
+  }
+}
+
+.estadisticas {
+  position: relative;
+  video {
+    z-index: -1;
   }
 }
