--- a/scss/pages/_socialMedia.scss
+++ b/scss/pages/_socialMedia.scss
@@ -1,8 +1,13 @@
 @use '../abstracts/mixins' as *;
 
 .socialMediaHeader {
-  background: url(../../images/socialMedia/fondo\ 1.jpg) no-repeat bottom center /
+  background: url(../images/socialMedia/fondo\ 1.jpg) no-repeat bottom center /
     cover;
+
+    &__logo {
+      width: 100%;
+      max-width: 50rem;
+    }
 }
 
 .abrigo {
@@ -26,7 +31,8 @@
 .compras {
   max-width: 110rem;
 
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 
   & > div {
     padding: 5rem 3rem;
@@ -34,5 +40,10 @@
 
   ul {
     list-style: none;
+  }
+
+  .crown {
+    width: 100%;
+    max-width: 20rem;
   }
 }
