background folder finished

--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -333,7 +333,7 @@
 }
 
 .bg-multicolor {
-  background: url(../images/aplicaionesMoviles/fondo1.jpg) no-repeat center
+  background: url('../images/background/fondo1.jpg') no-repeat center
     center / cover;
 }
 
@@ -342,22 +342,21 @@
 }
 
 .bg-black {
-  // background: url("../../images/aplicaionesMoviles/fondo2.jpg") no-repeat center center / cover;
   background: black;
 }
 
 .bg-black-2 {
-  background: url(../images/socialMedia/fondo\ 3.jpg) no-repeat center center /
+  background: url('../images/background/fondo\ 3.jpg') no-repeat center center /
     cover;
 }
 
 .bg-black-ya {
-  background: url(../../images/tienda/fondo_2.jpg) no-repeat center center /
+  background: url('../images/background/fondo_2.jpg') no-repeat center center /
     cover;
 }
 
 .bg-ya {
-  background: url('../images/aplicaionesMoviles/fondo2.jpg') no-repeat center
+  background: url('../images/background/fondo2.jpg') no-repeat center
     center / cover;
 }
 
