--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ body {
 }
 
 .bg-multicolor {
-  background: url(../images/aplicaionesMoviles/fondo1.jpg) no-repeat center center/cover;
+  background: url("../images/background/fondo1.jpg") no-repeat center center/cover;
 }
 
 .bg-blue-green {
@@ -362,15 +362,15 @@ body {
 }
 
 .bg-black-2 {
-  background: url(../images/socialMedia/fondo\ 3.jpg) no-repeat center center/cover;
+  background: url("../images/background/fondo 3.jpg") no-repeat center center/cover;
 }
 
 .bg-black-ya {
-  background: url(../../images/tienda/fondo_2.jpg) no-repeat center center/cover;
+  background: url("../images/background/fondo_2.jpg") no-repeat center center/cover;
 }
 
 .bg-ya {
-  background: url("../images/aplicaionesMoviles/fondo2.jpg") no-repeat center center/cover;
+  background: url("../images/background/fondo2.jpg") no-repeat center center/cover;
 }
 
 .bg-green-light {
