--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ body {
 }
 
 .bg-black-2 {
-  background: url("../images/background/fondo 3.jpg") no-repeat center center/cover;
+  background: url("../images/background/fondo3.jpg") no-repeat center center/cover;
 }
 
 .bg-black-ya {
