--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -346,7 +346,7 @@
 }
 
 .bg-black-2 {
-  background: url('../images/background/fondo\ 3.jpg') no-repeat center center /
+  background: url('../images/background/fondo3.jpg') no-repeat center center /
     cover;
 }
 
