--- a/scss/layout/_topNav.scss
+++ b/scss/layout/_topNav.scss
@@ -127,7 +127,7 @@
 
         &:hover .dropdown__content {
           display: grid;
-          max-height: 9999px;
+          // max-height: 9999px;
         }
       }
     }
