--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -12,6 +12,10 @@ $c-green: #4dceb5;
 
 $c-green-dark: #04a777;
 
+$c-green-darker: #00CFB5;
+
+$green: #95E0CC;
+
 $green-light: #edfff5;
 
 $green-lighter: #f5fff9;
