--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @use 'components/columns';
 @use 'components/flexContainer';
 
+@use 'pages/desarrolloweb';
 @use 'pages/identidad';
 @use "pages/lanzaya";
 @use "pages/socialMedia";
