--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,10 @@ body {
   justify-content: center;
 }
 
+.align-self-center {
+  align-self: center;
+}
+
 .align-items-start {
   align-items: center;
 }
@@ -620,7 +624,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     transform: translate(-30rem);
     padding: 5rem 3rem 2rem 3rem;
-    width: 630px;
+    width: 450px;
   }
 }
 .blockNav__box > ul .dropdown__content a {
