--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -178,6 +178,10 @@
   justify-content: center;
 }
 
+.align-self-center {
+  align-self: center;
+}
+
 .align-items-start {
   
   align-items: center;
