--- a/scss/components/_cartaPago.scss
+++ b/scss/components/_cartaPago.scss
@@ -4,6 +4,15 @@
 $gray: #d1d3d1;
 
 .pago {
+  &__checked {
+    height: 3rem;
+  }
+
+  &__border {
+    padding-bottom: 1rem;
+    border-bottom: 3px solid $c-green;
+  }
+
   & > .d-flex {
     gap: 3rem;
 
