--- a/scss/components/_cartaPago.scss
+++ b/scss/components/_cartaPago.scss
@@ -13,6 +13,11 @@ $gray: #d1d3d1;
     border-bottom: 3px solid $c-green;
   }
 
+  &__border--top {
+    padding-top: 3rem;
+    border-top: 3px solid $c-green;
+  }
+
   & > .d-flex {
     gap: 3rem;
 
